// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label renders an input correctly 1`] = `
<label
  className="Label__Test__root Label__Test--hasInput"
  htmlFor="field-id"
>
  <span
    className="Label__Test__text"
  >
    Label text with input
  </span>
  <input
    id="field-id"
    type="checkbox"
  />
</label>
`;

exports[`Label renders as a basic label with custom #className 1`] = `
<label
  className="Label__Test__root custom-classname"
  data-id="label-data-id"
>
  <span
    className="Label__Test__text"
  >
    Label text
  </span>
</label>
`;

exports[`Label renders hidden label 1`] = `
<label
  className="Label__Test__root Label__Test--hasInput"
  htmlFor="field-id"
>
  <span
    className="VisuallyHidden__Test__root"
  >
    Label text - hidden
  </span>
  <input
    id="field-id"
    type="checkbox"
  />
</label>
`;

exports[`Label renders label position class 'bottom' 1`] = `
<label
  className="Label__Test__root Label__Test---inputPosition-6-bottom Label__Test--hasInput"
  htmlFor="field-id"
>
  <span
    className="Label__Test__text"
  >
    Label text - bottom
  </span>
  <input
    id="field-id"
    type="checkbox"
  />
</label>
`;

exports[`Label renders label position class 'end' 1`] = `
<label
  className="Label__Test__root Label__Test---inputPosition-3-end Label__Test--hasInput"
  htmlFor="field-id"
>
  <span
    className="Label__Test__text"
  >
    Label text - end
  </span>
  <input
    id="field-id"
    type="checkbox"
  />
</label>
`;

exports[`Label renders label position class 'start' 1`] = `
<label
  className="Label__Test__root Label__Test---inputPosition-5-start Label__Test--hasInput"
  htmlFor="field-id"
>
  <span
    className="Label__Test__text"
  >
    Label text - start
  </span>
  <input
    id="field-id"
    type="checkbox"
  />
</label>
`;

exports[`Label renders label position class 'top' 1`] = `
<label
  className="Label__Test__root Label__Test---inputPosition-3-top Label__Test--hasInput"
  htmlFor="field-id"
>
  <span
    className="Label__Test__text"
  >
    Label text - top
  </span>
  <input
    id="field-id"
    type="checkbox"
  />
</label>
`;
